--- a/client/partial/customers/customers-edit.html
+++ b/client/partial/customers/customers-edit.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3>Customer View</h3>
+	<h3>Customer Edit</h3>
 </div>
 <div class="modal-body customer-item">
 	<table>
