--- a/client/partial/customers/customers-edit.html
+++ b/client/partial/customers/customers-edit.html
@@ -1,26 +1,34 @@
-<div class="modal-header">
-	<h3>Customer Edit</h3>
-</div>
-<div class="modal-body customer-item">
-	<table>
-		<tr>
-			<th>Name:</th>
-			<td>{{customer.name}}</td>
+<form>
+
+	<div class="modal-header">
+		<h3>Customer</h3>
+	</div>
+	<div class="modal-body customer-item">
+
+		<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+
+		<table>
+			<tr>
+				<th>Name:</th>
+				<td><input type="text" class="form-control" ng-model="customer.name" /></td>
+				</tr>
+			<tr>
+				<th>Address:</th>
+				<td><input type="text" class="form-control" ng-model="customer.address" /></td>
 			</tr>
-		<tr>
-			<th>Address:</th>
-			<td>{{customer.address}}</td>
-		</tr>
-		<tr>
-			<th>State:</th>
-			<td>{{customer.state}}</td>
-		</tr>
-		<tr>
-			<th>Country:</th>
-			<td>{{customer.country}}</td>
-		</tr>
-	</table>
-</div>
-<div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()">OK</button>
-</div>
+			<tr>
+				<th>State:</th>
+				<td><input type="text" class="form-control" ng-model="customer.state" /></td>
+			</tr>
+			<tr>
+				<th>Country:</th>
+				<td><input type="text" class="form-control" ng-model="customer.country" /></td>
+			</tr>
+		</table>
+	</div>
+	<div class="modal-footer">
+		<button type="submit" class="btn btn-primary" ng-click="save()">Save</button>
+		<button class="btn btn-danger" ng-click="cancel()">Cancel</button>
+	</div>
+
+</form>
