--- a/client/partial/customers/customers-view.html
+++ b/client/partial/customers/customers-view.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3>Customer View</h3>
+	<h3>Customer</h3>
 </div>
 <div class="modal-body customer-item">
 	<table>
@@ -22,5 +22,5 @@
 	</table>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()">OK</button>
+	<button class="btn btn-primary" ng-click="close()">Close</button>
 </div>
