--- a/client/partial/customers/customers.html
+++ b/client/partial/customers/customers.html
@@ -3,6 +3,9 @@
 	<H2>CUSTOMERS</H2>
 
 	<div>
+		
+		<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+
 		<table class="table">
 			<thead>
 				<tr>
@@ -27,6 +30,8 @@
 						Country
 					</th>
 					<th>
+						<button type="submit" class="btn btn-success" ng-click="new()">New Customer</button><br/><br/>
+						Actions
 					</th>
 				</tr>
 			</thead>
@@ -44,7 +49,7 @@
 						<button type="button" class="btn btn-default" title="Edit" ng-click="edit(customer)">
 							<span class="glyphicon glyphicon-edit"></span>
 						</button>
-						<button type="button" class="btn btn-default" title="Remove">
+						<button type="button" class="btn btn-default" title="Remove" ng-click="delete(customer)">
 							<span class="glyphicon glyphicon-remove-circle"></span>
 						</button>
 						</div>
