products CRUD implemented

--- a/client/partial/home/home.html
+++ b/client/partial/home/home.html
@@ -20,7 +20,7 @@
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-red">
 		        <h4>Products</h4>
-		        <div><a href="#"><i class="glyphicon glyphicon-barcode"></i></a></div>
+		        <div><a href="/#/products"><i class="glyphicon glyphicon-barcode"></i></a></div>
 		    </div>
 		</div>
 		<div class="col-md-3 col-sm-6">
