added initial sales order module

--- a/client/partial/home/home.html
+++ b/client/partial/home/home.html
@@ -26,7 +26,7 @@
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-blue">            
 		        <h4>Sales</h4>
-		        <div><a href="#"><i class="glyphicon glyphicon-list-alt"></i></a></div>
+		        <div><a href="/#/sales"><i class="glyphicon glyphicon-list-alt"></i></a></div>
 		    </div>
 		</div>
 		<div class="col-md-3 col-sm-6">
