--- a/client/partial/sales/sales-delete.html
+++ b/client/partial/sales/sales-delete.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
-	<h3>{{product.description}}</h3>
+	<h3>{{customer.name}}</h3>
 </div>
 <div class="modal-body customer-item">
 	<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
-	Are you sure that you want to delete this product?
+	Are you sure that you want to delete this customer?
 </div>
 <div class="modal-footer">
 	<button class="btn btn-danger" ng-click="delete()">Delete</button>
