added initial sales order module

--- a/client/css/app.less
+++ b/client/css/app.less
@@ -9,6 +9,7 @@
 /* Partial LESS */
 @import "../partial/home/home.less";
 @import "../partial/customers/customers.less";
+@import "../partial/sales/sales.less";
 /* Add Partial LESS Above */
 
 /* Required for Angular UI Bootstrap */
