--- a/client/partial/sales/sales - copia.html
+++ b/client/partial/sales/sales - copia.html
@@ -19,10 +19,19 @@
 					<th>
 						Customer
 					</th>
-					<th class="cell-center">
+					<th>
+						Product
+					</th>
+					<th>
+						Quantity
+					</th>
+					<th>
+						Price
+					</th>
+					<th>
 						Amount
 					</th>
-					<th class="cell-center">
+					<th>
 						State
 					</th>
 					<th>
@@ -31,13 +40,16 @@
 					</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr ng-repeat = "sale in sales">
+			<tbody ng-repeat = "sale in sales">
+				<tr ng-repeat = "saleLine in sale.lines">
 					<td>{{sale._id}}</td>
 					<td>{{sale.created | date: 'dd/MM/yyyy'}}</td>
 					<td>{{sale.customer.name}}</td>
-					<td class="cell-center">{{sale.amount}}</td>
-					<td class="cell-center"><span class="label" ng-class="getStatusClass(sale)">{{sale.state}}<span></td>
+					<td>{{saleLine.product.description}}</td>
+					<td>{{saleLine.quantity}}</td>
+					<td>{{saleLine.price}}</td>
+					<td>{{sale.amount}}</td>
+					<td>{{sale.state}}</td>
 					<td>
 						<div style="width: 150px">
 						<button type="button" class="btn btn-default" title="View" ng-click="view(sale)">
