--- a/client/partial/sales/sales.less
+++ b/client/partial/sales/sales.less
@@ -2,3 +2,35 @@
 	text-align: center;
 }
 
+.wider {
+	width: 100%;
+}
+
+.amount-label {
+	padding: 10px;
+	margin-top: 20px;
+	border-radius: 4px;
+	text-align: right;
+	background-color: #e5e5e5;
+}
+
+.amount-label span {
+	margin-left: 10px;
+	font-weight: bolder;
+}
+
+.sales-select-states {
+	width: 200px;
+}
+
+.sales-select-customers {
+	width: 300px;
+}
+
+.sales-select-products {
+	width: 300px;
+}
+
+.sales-separator {
+	border: 1px dashed #e5e5e5;
+}
