--- a/client/partial/sales/sales-edit.html
+++ b/client/partial/sales/sales-edit.html
@@ -1,40 +1,52 @@
-<form>
+<div class="modal-header">
+	<h3>Sales</h3>
+</div>
+<div class="modal-body customer-item">
 
-	<div class="modal-header">
-		<h3>Product</h3>
-	</div>
-	<div class="modal-body customer-item">
+	<table>
+		<tr>
+			<th>#:</th>
+			<td>{{sale._id}}</td>
+		</tr>
+		<tr>
+			<th>Date:</th>
+			<td>{{sale.created | date: 'dd/MM/yyyy'}}</td>
+		</tr>
+		<tr>
+			<th>Customer:</th>
+			<td>{{sale.customer.name}}</td>
+		</tr>		
+		<tr>
+			<th>State:</th>
+			<td><input type="text" class="sales-select-states" ui-select2="statesSelectOptions" ng-model="sale.state"/></td>
+		</tr>
+	</table>
 
-		<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+	<hr class="sales-separator" />
 
-		<table>
+	<table class="wider">
+		<thead>
 			<tr>
-				<th>Description:</th>
-				<td><input type="text" class="form-control" ng-model="product.description" /></td>
-				</tr>
-			<tr>
-				<th>Price:</th>
-				<td><input type="text" class="form-control" ng-model="product.price" /></td>
+				<th>Product</th>
+				<th class="cell-center">Quantity</th>
+				<th class="cell-center">Price</th>
 			</tr>
-		</table>
-	</div>
-	<div class="modal-footer">
-		<button type="submit" class="btn btn-primary" ng-click="save()">Save</button>
-		<button class="btn btn-danger" ng-click="cancel()">Cancel</button>
-	</div>
+		</thead>
+		<tbody>
+			<tr ng-repeat="line in sale.lines">
+				<td>{{line.product.description}}</td>
+				<td class="cell-center">{{line.quantity}}</td>
+				<td class="cell-center">{{line.price | number:2}}</td>
+			</tr>
+		</tbody>
+	</table>
 
-</form>
 
+	<p class="amount-label">Total Amount: <span>{{sale.amount | number:2}}</span></p>
 
+</div>
 
-<div class="col-md-12" ng-controller="SalesListController">
-
-	<H2>SALES ORDERS</H2>
-	
-  <input type="text" style="width:300px" ui-select2="customersSelectOptions" ng-model="customer"/>
-  <br/>
-  Seleccionado: {{customer}}
-  <br/>
-  Espia: {{espia}}
-
+<div class="modal-footer">
+	<button type="submit" class="btn btn-primary" ng-click="save()">Save</button>
+	<button class="btn btn-danger" ng-click="cancel()">Cancel</button>
 </div>
