--- a/client/partial/sales/sales.html
+++ b/client/partial/sales/sales.html
@@ -36,7 +36,7 @@
 					<td>{{sale._id}}</td>
 					<td>{{sale.created | date: 'dd/MM/yyyy'}}</td>
 					<td>{{sale.customer.name}}</td>
-					<td class="cell-center">{{sale.amount}}</td>
+					<td class="cell-center">{{sale.amount | number:2}}</td>
 					<td class="cell-center"><span class="label" ng-class="getStatusClass(sale)">{{sale.state}}<span></td>
 					<td>
 						<div style="width: 150px">
@@ -54,59 +54,15 @@
 				</tr>
 			</tbody>
 
-		</table>		
-
-		<!--
-		<table class="table">
-			<thead>
-				<tr>
-					<th>
-						<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Filter By Description" ng-model="filters.description">
-						<br/>
-						Description
-					</th>
-					<th>
-						Price
-					</th>
-					<th>
-						<button type="submit" class="btn btn-success" ng-click="new()">New Product</button><br/><br/>
-						Actions
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat = "product in products">
-					<td>{{product.description}}</td>
-					<td>{{product.price}}</td>
-					<td>
-						<div style="width: 150px">
-						<button type="button" class="btn btn-default" title="View" ng-click="view(product)">
-							<span class="glyphicon glyphicon-eye-open"></span>
-						</button>
-						<button type="button" class="btn btn-default" title="Edit" ng-click="edit(product)">
-							<span class="glyphicon glyphicon-edit"></span>
-						</button>
-						<button type="button" class="btn btn-default" title="Remove" ng-click="delete(product)">
-							<span class="glyphicon glyphicon-remove-circle"></span>
-						</button>
-						</div>
-					</td>
-				</tr>
-			</tbody>
-
 		</table>
-		
-		-->
 
 	</div>
 
 
-	<!--
-	<pagination items-per-page="itemsPerPage" total-items="products.count" page="currentPage" on-select-page="selectPage(page)"></pagination>
+	<pagination items-per-page="itemsPerPage" total-items="sales.count" page="currentPage" on-select-page="selectPage(page)"></pagination>
 
 	<br/>
-	# Products: {{products.count}}<br/>
-	-->
+	# Sales: {{sales.count}}<br/>
 
 
   
