client - initial dashboard implementation

--- a/client/css/app.less
+++ b/client/css/app.less
@@ -10,6 +10,7 @@
 @import "../partial/home/home.less";
 @import "../partial/customers/customers.less";
 @import "../partial/sales/sales.less";
+@import "../partial/dashboard/dashboard.less";
 /* Add Partial LESS Above */
 
 /* Required for Angular UI Bootstrap */
