--- a/client/partial/home/home.html
+++ b/client/partial/home/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController">
+<div>
 
 
 	<div class="row">
@@ -32,7 +32,7 @@
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-yellow">            
 		        <h4>Dashboard</h4>
-		        <div><a href="#"><i class="glyphicon glyphicon-euro"></i></a></div>
+		        <div><a href="/#/dashboard"><i class="glyphicon glyphicon-euro"></i></a></div>
 		    </div>
 		</div>
 	</div>
