--- a/client/partial/home/home.less
+++ b/client/partial/home/home.less
@@ -100,6 +100,20 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	color: #fff;
 }
 
+
+
+.servive-block-in h2 {
+	color: white;
+	font-size: 40px;
+}
+
+.servive-block-in h4 {
+	color: white;
+	font-size: 30px;
+}
+
+
+
 /*Servive Block Versions*/
 .service-v1 h2 {
 	margin: 15px 0;
