--- a/client/partial/customers/customers.html
+++ b/client/partial/customers/customers.html
@@ -1,6 +1,13 @@
 <div class="col-md-12" ng-controller="CustomersListController">
 
-	<H2>CUSTOMERS</H2>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h2 id="container">CUSTOMERS</h2>
+			</div>
+		</div>
+	</div>
+
 
 	<div>
 		
