--- a/client/partial/products/products.html
+++ b/client/partial/products/products.html
@@ -1,6 +1,13 @@
 <div class="col-md-12" ng-controller="ProductsListController">
 
-	<H2>PRODUCTS</H2>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h2 id="container">PRODUCTS</h2>
+			</div>
+		</div>
+	</div>
+
 
 	<div>
 		
