--- a/client/partial/sales/sales.html
+++ b/client/partial/sales/sales.html
@@ -1,6 +1,13 @@
 <div class="col-md-12" ng-controller="SalesListController">
 
-	<H2>SALES ORDERS</H2>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h2 id="container">SALES ORDERS</h2>
+			</div>
+		</div>
+	</div>
+
 	
 	<div>
 		
