client - dashboard design

--- a/client/partial/dashboard/dashboard.html
+++ b/client/partial/dashboard/dashboard.html
@@ -22,13 +22,13 @@
 				<div class="panel-body">
 
 					<div class="col-md-6">
-						<div class="servive-block-in servive-block-colored servive-block-green">
+						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{prevMonth}}</h4>
 							<h2>{{prevCount}}</h2>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="servive-block-in servive-block-colored servive-block-green">
+						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{currentMonth}}</h4>
 							<h2>{{count}}</h2>
 						</div>
@@ -49,13 +49,13 @@
 				<div class="panel-body">
 
 					<div class="col-md-6">
-						<div class="servive-block-in servive-block-colored servive-block-red">
+						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{prevMonth}}</h4>
 							<h2>{{prevAmount}}</h2>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="servive-block-in servive-block-colored servive-block-red">
+						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{currentMonth}}</h4>
 							<h2>{{amount}}</h2>
 						</div>
