--- a/client/partial/home/home.less
+++ b/client/partial/home/home.less
@@ -61,7 +61,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	background: #3498db;
 }
 .servive-block .servive-block-grey {
-	background: #95a5a6;
+	background: #bbb;
+	border-radius: 6px;
+	margin-top: 30px;
 }
 .servive-block .servive-block-yellow {
 	background: #f1c40f;
