--- a/client/partial/dashboard/dashboard.html
+++ b/client/partial/dashboard/dashboard.html
@@ -1,16 +1,5 @@
 <div ng-controller="DashboardController">
 
-<!--
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="page-header">
-				<h1 id="container">Sales Order Dashboard</h1>
-			</div>
-		</div>
-	</div>
--->
-
-
 	<div class="row servive-block margin-bottom-10 margin-top-40">
 
 		<div class="col-md-6">
@@ -51,13 +40,13 @@
 					<div class="col-md-6">
 						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{prevMonth}}</h4>
-							<h2>{{prevAmount}}</h2>
+							<h2>{{prevAmount | number:2}}</h2>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="servive-block-in servive-block-colored servive-block-grey">
 							<h4>{{currentMonth}}</h4>
-							<h2>{{amount}}</h2>
+							<h2>{{amount | number:2}}</h2>
 						</div>
 					</div>
 
