--- a/client/partial/sales/sales.html
+++ b/client/partial/sales/sales.html
@@ -46,16 +46,16 @@
 					<td class="cell-center">{{sale.amount | number:2}}</td>
 					<td class="cell-center"><span class="label" ng-class="getStatusClass(sale)">{{sale.state}}<span></td>
 					<td>
-						<div style="width: 150px">
-						<button type="button" class="btn btn-default" title="View" ng-click="view(sale)">
-							<span class="glyphicon glyphicon-eye-open"></span>
-						</button>
-						<button type="button" class="btn btn-default" title="Edit" ng-click="edit(sale)">
-							<span class="glyphicon glyphicon-edit"></span>
-						</button>
-						<button type="button" class="btn btn-default" title="Remove" ng-click="delete(sale)">
-							<span class="glyphicon glyphicon-remove-circle"></span>
-						</button>
+						<div class="button-actions">
+							<button type="button" class="btn btn-default" title="View" ng-click="view(sale)">
+								<span class="glyphicon glyphicon-eye-open"></span>
+							</button>
+							<button type="button" class="btn btn-default" title="Edit" ng-click="edit(sale)">
+								<span class="glyphicon glyphicon-edit"></span>
+							</button>
+							<button type="button" class="btn btn-default" title="Remove" ng-click="delete(sale)">
+								<span class="glyphicon glyphicon-remove-circle"></span>
+							</button>
 						</div>
 					</td>
 				</tr>
