IP digital ocean

--- a/client/partial/home/home.html
+++ b/client/partial/home/home.html
@@ -14,25 +14,25 @@
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-green">
 		        <h4>Customers</h4>
-		        <div><a href="/#/customers"><i class="glyphicon glyphicon-user"></i></a></div>
+		        <div><a href="#/customers"><i class="glyphicon glyphicon-user"></i></a></div>
 		    </div>
 		</div>
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-red">
 		        <h4>Products</h4>
-		        <div><a href="/#/products"><i class="glyphicon glyphicon-barcode"></i></a></div>
+		        <div><a href="#/products"><i class="glyphicon glyphicon-barcode"></i></a></div>
 		    </div>
 		</div>
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-blue">            
 		        <h4>Sales</h4>
-		        <div><a href="/#/sales"><i class="glyphicon glyphicon-list-alt"></i></a></div>
+		        <div><a href="#/sales"><i class="glyphicon glyphicon-list-alt"></i></a></div>
 		    </div>
 		</div>
 		<div class="col-md-3 col-sm-6">
 		    <div class="servive-block-in servive-block-colored servive-block-yellow">            
 		        <h4>Dashboard</h4>
-		        <div><a href="/#/dashboard"><i class="glyphicon glyphicon-euro"></i></a></div>
+		        <div><a href="#/dashboard"><i class="glyphicon glyphicon-euro"></i></a></div>
 		    </div>
 		</div>
 	</div>
